# Mesk-qt

./: Makefile.in  THANKS  TODO  acsite.m4  autogen.sh  configure.in  devenv.sh  setup.py.in
doc/: genres  genres.gnumeric  syncstats.gnumeric
etc/: gst-python-0.8.1.ebuild  mesk-0.0.3.ebuild  meskrc  meskrc-test
patches/: album-cover-hackfuck.diff  database-mysql.py
sql/: setupdb-sqlite.sql
src/driver/: mesk
src/mesk/: __init__.py  albumcover.py  amazon.py  archive.py  config.py  database.py  externalsearch.py  program_info.py.in  utils.py
src/mesk/ui/: AboutDialog.py  AboutDialogBase.ui  AlbumCoverLabel.py  ArtistAlbumBrowserBase.ui  AudioControlWidget.cw  AudioControlWidget.py  AudioControlWidgetBase.ui  BrowserWidget.py  BrowserWidgetBase.ui  ConfigDialogBase.ui  CurrentTrackWidget.py  CurrentTrackWidgetBase.ui  GstAudioControl.py  MainWindow.py  MainWindowBase.ui  Makefile  PlaylistTable.py  PlaylistWidget.cw  PlaylistWidget.py  PlaylistWidgetBase.ui  StartHereWizard.py  StartHereWizardBase.ui  __init__.py  syncwidget.ui
